public enum OrderStatus {
    OPEN,
    CLOSED,
    CANCELED;
}
